241203 Update Memorion.java